Fix image size in desktop

--- a/src/content/articles/best-laptops-for-developers.mdx
+++ b/src/content/articles/best-laptops-for-developers.mdx
@@ -26,8 +26,8 @@ In the ever-evolving landscape of technology, developers require laptops that ca
   alt=""
   class="rounded-lg"
   formats={['avif', 'webp']}
-  widths={[375, 425, 768, 1024, image3.width]}
-  sizes={`(max-width: 375px) 375px, (max-width: 425px) 425px, (max-width: 768px) 768px, (max-width: 1440px) 1024px ${image3.width}px`}
+  widths={[375, 425, 768, 140000]}
+  sizes={`(max-width: 375px) 375px, (max-width: 425px) 425px, (max-width: 768px) 768px, (max-width: 1440px) 1400px`}
 />
 
 | Month    | Savings | Test   | test   | test |
