add article and allow indexing website

--- a/src/content/articles/jio-recharge-plans-2024-prepaid-mobile-data-price-and-validity.mdx
+++ b/src/content/articles/jio-recharge-plans-2024-prepaid-mobile-data-price-and-validity.mdx
@@ -5,19 +5,18 @@ description: I am going to discuss Jio prepaid recharge plans for mobile. I will
 tags:
   - Jio
   - Recharge
-  - Mobile
 author: Faisal Abid
-image: ../img/sd-6-gen-1.jpg
+image: ../img/jio-recharge-plans.png
 pubDate: 2024-10-31
 ---
 
 Jio came with a revolution in India in the year 2016. From its inception, it never looked back. Now it has become the leading telecommunication company in India. It has constantly increased its subscribers. Till October 2024, Jio has 481.8 million subscribers which is more than 33% of India’s total population. That is huge! Right?
 
-Since Jio came into the telecommunication field, it has provided the customer with its free plans. I still remember I had to stand in the queue for almost six hours to get a Jio SIM card. Now the dynamics have changed and the companies including Jio have begun to charge for their services. Jio with Airtel and Vi have also increased their prices with the advent of their 5G services. Below we are going to discuss their prepaid recharge plans for mobile. I will write only the relevant plans that I think will be beneficial to you rather than all plans.
+Since Jio came into the telecommunication field, it has provided the customers its services completely free. I still remember I had to stand in the queue for almost six hours to get a Jio SIM card. Now the dynamics have changed and the companies including Jio have begun to charge for their services. Jio with Airtel and Vi have also increased their prices with the advent of their 5G services. Below we are going to discuss their prepaid recharge plans for mobile. I will write only the relevant plans that I think will be beneficial to you rather than all plans with calling free all over India of course.
 
 ## Truly 5G Unlimited Plans:
 
-Jio only provides unlimited 5G data only on or above its 2 GB/Day plans. Here 2 GB data is exhaustible if you are on 4G usage. If you surf the internet on a 5G network it will not reduce your 2GB quota per day as surfing on 5G is unlimited. Below is the plan, validity, and data threshold in tabular form.
+Jio provides unlimited 5G data only on or above its 2 GB/Day plans. Here 2 GB data is exhaustible if you are on 4G usage. If you surf the internet on a 5G network it will not reduce your 2GB quota per day as surfing on 5G is unlimited. Below is the plan, validity, and data threshold in tabular form.
 
 | Price  | Validity (Days) | Data             |
 | ------ | --------------- | ---------------- |
@@ -30,3 +29,62 @@ Jio only provides unlimited 5G data only on or above its 2 GB/Day plans. Here 2 
 | ₹ 899  | 90              | 2 GB/Day + 20 GB |
 | ₹ 999  | 98              | 2 GB/Day         |
 | ₹ 3599 | 365             | 2.5 GB/Day       |
+
+## Value Pack:
+
+From hereon all plans do not have unlimited 5G data. You can browse the internet on 5G speed but it is not unlimited and will reduce your daily data threshold quota.
+
+This plan only gives a particular amount of data in the validity period. This can be beneficial for anyone who has a broadband connection in their home or office or does not require that much daily data to browse the internet. Below is the plan, validity, and data threshold in tabular form.
+
+| Price  | Validity (Days) | Data  |
+| ------ | --------------- | ----- |
+| ₹ 189  | 28              | 2 GB  |
+| ₹ 479  | 84              | 6 GB  |
+| ₹ 1899 | 336             | 24 GB |
+
+\*You can only find this value plan through the MyJio app or website.
+
+## 1.5 GB/Day Plans:
+
+| Price | Validity (Days) | Data       |
+| ----- | --------------- | ---------- |
+| ₹ 199 | 18              | 1.5 GB/Day |
+| ₹ 239 | 22              | 1.5 GB/Day |
+| ₹ 299 | 28              | 1.5 GB/Day |
+| ₹ 319 | Calendar Month  | 1.5 GB/Day |
+| ₹ 579 | 56              | 1.5 GB/Day |
+| ₹ 666 | 70              | 1.5 GB/Day |
+| ₹ 799 | 84              | 1.5 GB/Day |
+
+## 1 GB/Day Plans:
+
+| Price | Validity (Days) | Data     |
+| ----- | --------------- | -------- |
+| ₹ 209 | 22              | 1 GB/Day |
+| ₹ 249 | 28              | 1 GB/Day |
+
+## 2.5 GB/Day Plans:
+
+| Price  | Validity (Days) | Data       |
+| ------ | --------------- | ---------- |
+| ₹ 399  | 28              | 2.5 GB/Day |
+| ₹ 3599 | 365             | 2.5 GB/Day |
+
+## 3 GB/Day Plans:
+
+| Price  | Validity (Days) | Data     |
+| ------ | --------------- | -------- |
+| ₹ 449  | 28              | 3 GB/Day |
+| ₹ 1199 | 84              | 3 GB/Day |
+
+## Yearly Plans:
+
+| Price  | Validity (Days) | Data       |
+| ------ | --------------- | ---------- |
+| ₹ 3599 | 365             | 2.5 GB/Day |
+| ₹ 1899 | 336             | 24 GB      |
+| ₹ 1899 | 336             | 24 GB      |
+
+This article should give you a clear idea of the plans relevant to you. Now no more confusion and searching the plans.
+
+One thing I like to mention here is that I have not included any OTT or App Subscription plan.
