Test og:image tag

--- a/src/content/articles/jio-recharge-plans-2024-prepaid-mobile-data-price-and-validity.mdx
+++ b/src/content/articles/jio-recharge-plans-2024-prepaid-mobile-data-price-and-validity.mdx
@@ -7,7 +7,7 @@ tags:
   - Recharge
 author: Faisal Abid
 image: ../img/jio-recharge-plans.png
-ogImage: /src/content/img/jio-recharge-plans.png
+ogImage: https://techiefaisal.com/jio-recharge-plans.png
 pubDate: 2024-10-31
 ---
 
